--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -20,6 +20,8 @@
 <!-- These resources are around just to allow their values to be customized
      for different hardware and product builds. -->
 <resources>
+    <!-- HW keys prefs-->
+    <bool name="config_hwKeysPref">true</bool>
     <!-- ############################################################## -->
     <!-- ### WIFI AND TETHERING                                         -->
     <!-- ############################################################## -->
@@ -147,7 +149,7 @@
          This needs to match the constants in
          policy/src/com/android/internal/policy/impl/PhoneWindowManager.java
     -->
-    <integer name="config_longPressOnHomeBehavior">3</integer>
+    <integer name="config_longPressOnHomeBehavior">2</integer>
 
     <!-- Control the behavior when the user double-taps the home button.
             0 - Nothing
@@ -159,7 +161,7 @@
          This needs to match the constants in
          policy/src/com/android/internal/policy/impl/PhoneWindowManager.java
     -->
-    <integer name="config_doubleTapOnHomeBehavior">2</integer>
+    <integer name="config_doubleTapOnHomeBehavior">3</integer>
 
     <!-- ############################################################## -->
     <!-- ### TOUCHSCREEN                                                -->
